TEST_PROGRAMS/VALID/Inderjot_Ratol/factorial.min
#calulate factorial of x
var x: int;
var fact: int;

read x;
fact=1;
while x do
	fact=fact*x;
	x=x-1;
done

print y;
