TEST_PROGRAMS/INVALID/grady_weber/missingSemicolon.min
#Missing Semicolon
var x : int;
var y : float;
x = 10

